completed first assignment from module 4

--- a/module4/conFusion/www/templates/contactus.html
+++ b/module4/conFusion/www/templates/contactus.html
@@ -1,5 +1,23 @@
 <ion-view view-title="Contact Us">
   <ion-content>
-    <h1>Contact Us</h1>
+    <div class="card">
+      <div class="item item-divider">
+                 Location Information
+             </div>
+      <div class="item item-text-wrap">
+                  <h2>Our Address</h2>
+                  <p>121, Clear Water Bay Road</p>
+                  <p>Clear Water Bay, Kowloon</p>
+                  <p>HONG KONG</p>
+                  <p class="ion-ios-telephone"> Tel: +852 1234 5678</p>
+                  <p class="ion-android-print"> Fax: +852 8765 4321</p>
+                  <p class="ion-android-mail"> Email:confusion@food.ne</p>
+              </div>
+      <div class="button-bar">
+        <a class="button button-positive ion-ios-telephone"> Class</a>
+        <a class="button button-calm ion-social-skype"> Skype</a>
+        <a class="button button-balanced ion-android-mail"> Email</a>
+      </div>
+    </div>
   </ion-content>
 </ion-view>
